policies/mounting-sensitive-host-directories.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: mounting-sensitive-host-directories
spec:
  categories:
  - Security Best Practices
  criteriaLocked: true
  description: Alert on deployments mounting sensitive host directories
  enforcementActions: []
  eventSource: NOT_APPLICABLE
  exclusions:
  - name: Don't alert on deployment gcp-cloud-controller-manager in openshift-cloud-controller-manager
      namespace
    deployment:
      name: gcp-cloud-controller-manager
      scope:
        cluster: ''
        namespace: openshift-cloud-controller-manager
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment haproxy-* in openshift-vsphere-infra namespace
    deployment:
      name: haproxy-.*
      scope:
        cluster: ''
        namespace: openshift-vsphere-infra
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment keepalived-.* in openshift-vsphere-infra namespace
    deployment:
      name: keepalived-.*
      scope:
        cluster: ''
        namespace: openshift-vsphere-infra
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment coredns-* in openshift-vsphere-infra namespace
    deployment:
      name: coredns-.*
      scope:
        cluster: ''
        namespace: openshift-vsphere-infra
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment splunkforwarder-ds in openshift-security namespace
    deployment:
      name: splunkforwarder-ds
      scope:
        cluster: ''
        namespace: openshift-security
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment oauth-openshift in openshift-authentication namespace
    deployment:
      name: oauth-openshift
      scope:
        cluster: ''
        namespace: openshift-authentication
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment cluster-cloud-controller-manager-operator in openshift-cloud-controller-manager-operator
      namespace
    deployment:
      name: cluster-cloud-controller-manager-operator
      scope:
        cluster: ''
        namespace: openshift-cloud-controller-manager-operator
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment ovnkube-master in  openshift-ovn-kubernetes namespace
    deployment:
      name: ovnkube-master
      scope:
        cluster: ''
        namespace: openshift-ovn-kubernetes
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment ovnkube-node in openshift-ovn-kubernetes namespace
    deployment:
      name: ovnkube-node
      scope:
        cluster: ''
        namespace: openshift-ovn-kubernetes
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment cluster-version-operator in openshift-cluster-version
      namespace
    deployment:
      name: cluster-version-operator
      scope:
        cluster: ''
        namespace: openshift-cluster-version
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment audit-exporter in openshift-security namespace
    deployment:
      name: audit-exporter
      scope:
        cluster: ''
        namespace: openshift-security
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment mdsd in openshift-azure-logging namespace
    deployment:
      name: mdsd
      scope:
        cluster: ''
        namespace: openshift-azure-logging
        label: null
    image: null
    expiration: null
  - name: Don't alert on StackRox collector
    deployment:
      name: collector
      scope:
        cluster: ''
        namespace: stackrox
        label: null
    image: null
    expiration: null
  - name: Don't alert on StackRox compliance
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: stackrox
        label:
          key: app
          value: stackrox-compliance
    image: null
    expiration: null
  - name: Don't alert on kube-system namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: kube-system
        label: null
    image: null
    expiration: null
  - name: Don't alert on istio-system namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: istio-system
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-kube-apiserver namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-kube-apiserver
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-kube-scheduler namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-kube-scheduler
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-etcd namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-etcd
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-kube-controller-manager namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-kube-controller-manager
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-oauth-apiserver namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-oauth-apiserver
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-apiserver namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-apiserver
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-network-operator namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-network-operator
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-machine-api namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-machine-api
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-dns namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-dns
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-cluster-csi-drivers namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-cluster-csi-drivers
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-cluster-node-tuning-operator namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-cluster-node-tuning-operator
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-multus namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-multus
        label: null
    image: null
    expiration: null
  - name: Don't alert on node-ca dameonset in the openshift-image-registry namespace
    deployment:
      name: node-ca
      scope:
        cluster: ''
        namespace: openshift-image-registry
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-sdn namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-sdn
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-machine-config-operator namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-machine-config-operator
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-logging namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-logging
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment aws-cloud-controller-manager in namespace openshift-cloud-controller-manager
    deployment:
      name: aws-cloud-controller-manager
      scope:
        cluster: ''
        namespace: openshift-cloud-controller-manager
        label: null
    image: null
    expiration: null
  isDefault: false
  lifecycleStages:
  - DEPLOY
  mitreAttackVectors: []
  mitreVectorsLocked: true
  policyName: GitOps - Mounting Sensitive Host Directories
  policySections:
  - sectionName: ''
    policyGroups:
    - fieldName: Volume Source
      booleanOperator: OR
      negate: false
      values:
      - value: (/etc/.*|/sys/.*|/dev/.*|/proc/.*|/var/.*)
  rationale: Mounting system directories from host implies container access to sensitive
    files on the host. This expands the attack surface of the container and gives
    an intruder an opportunity to break containment if the host is not properly secured.
  remediation: Ensure that deployments do not mount sensitive host directories, or
    exclude this deployment if host mount is required.
  scope: []
  severity: MEDIUM_SEVERITY
  disabled: false
